# cpp-magic-ascii-art-creator-tethys-balder

./: .gitignore  ArgumentumParser.cpp  ArgumentumParser.h  AsciiArtErrors.hpp  BMPConv.cpp  BMPConv.h  CMakeLists.txt  JPGConv.cpp  JPGConv.h  PNGConv.cpp  PNGConv.h  PictConverter.cpp  PictConverter.h  PictureContainer.cpp  PictureContainer.h  TODO.md  main.cpp
